# countervision

./: .gitignore  COPILOT_BUILD_PROMPT.md  Makefile  PRODUCTION_DIRECTION.md  PROGRESS.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
dashboard/: .gitignore  next.config.ts  package-lock.json  package.json
dashboard/scripts/: copy-data.cjs
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: alerts-feed.tsx  area-detail.tsx  charts.tsx  heatmap-hero.tsx  insights-and-cross.tsx  kpi.tsx  people-panel.tsx  video-panel.tsx
dashboard/src/lib/: analytics.ts
docs/: DEMO_SCRIPT.md  PRODUCTION_MODEL_SPEC.md  schema.md
pipeline/: config.yaml  main.py  pyproject.toml
pipeline/countervision/: __init__.py  aggregate.py  botsort_demo.yaml  cross_camera.py  detect_track.py  discover.py  id_switch.py  identity.py  logging_setup.py  timeparse.py  zones.py
pipeline/tools/: __init__.py  draw_zones.py
tests/: test_aggregate.py  test_cross_camera.py  test_discover.py  test_id_switch.py  test_identity.py  test_timeparse.py  test_zones.py
videos/camera-1/: README.md
videos/camera-3/: README.md
videos/camera-5/: README.md
watchlist/: README.md
