[project]
name = "countervision-pipeline"
version = "0.1.0"
description = "CounterVision retail-analytics pipeline (offline multi-camera CCTV)."
readme = "../README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Agents Limited" }]
license = { text = "Proprietary" }

# Phase 0 deps only. Heavy CV/ML deps (torch, ultralytics, supervision,
# insightface, onnxruntime-silicon) are added in later phases so the dry-run
# (and the CI smoke test) stay lightweight.
dependencies = [
    "pyyaml>=6.0.1",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["countervision"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-ra -q"
