[project]
name = "countervision-pipeline"
version = "0.1.0"
description = "CounterVision retail-analytics pipeline (offline multi-camera CCTV)."
readme = "../README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Agents Limited" }]
license = { text = "Proprietary" }

# Phase 0 deps + Phase 1 (detect + track).
# Heavier deps (insightface, onnxruntime-silicon) still deferred to Phase 3.
# Lightweight deps needed for Phase 0 (--dry-run), the IdSwitchCounter
# tests, and the synthetic-video discovery tests. CI installs only these
# so it stays fast.
dependencies = [
    "pyyaml>=6.0.1",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy CV/ML deps for Phase 1 (detect + track). Install with:
#   uv pip install -e ".[cv]"
# These are intentionally NOT in the default dependency set so CI doesn't
# need to pull torch / ultralytics on every push.
cv = [
    "torch>=2.4",          # MPS-capable on Apple Silicon
    "torchvision>=0.19",
    "ultralytics>=8.3",    # YOLO26 family + built-in BoT-SORT
    "supervision>=0.25",   # Detections / annotators / VideoSink
    "lap>=0.5.12",         # linear-assignment for BoT-SORT
]
# Phase 3 — face identity. Apple Silicon ceiling pins Python to 3.11
# (onnxruntime-silicon wheel availability). First run downloads
# buffalo_l weights to ~/.insightface/models (~326 MB).
identity = [
    "insightface>=0.7.3",
    "onnxruntime-silicon>=1.16; sys_platform == 'darwin'",
    "onnxruntime>=1.16;          sys_platform != 'darwin'",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["countervision"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-ra -q"
